[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/mountain_1.png" type="Texture" id=1]
[ext_resource path="res://scenes/itemholder/ItemHolder.gd" type="Script" id=2]

[node name="ItemHolder" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -974.0
margin_bottom = -718.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemRect" type="TextureRect" parent="SelectButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="AddButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddButtonLabel" type="Label" parent="AddButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "+"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
